modest improvement to relatedK/pFCT